fixed name on small screens and some content adjustment

--- a/css/style.css
+++ b/css/style.css
@@ -557,11 +557,11 @@ margin: 0px;
 	#nav-button{
 		display: inline-block;
 		position: absolute;
-		left: 24px;
-		font-size: 35px;
-		top: 40%;
-		margin-top: -12px;
-		color: white;
+		left: 20px;
+		font-size: 25px;
+		top: 50%;
+		margin-top: -13px;
+		color: #9e9e9e;
 
 	}
 	.name {
